Version 2.02.185 - 
==================================
  Add support for vgsplit with cached devices.
  Fix signal delivery checking race in libdaemon (lvmetad).
  Add missing Before=shutdown.target to LVM2 services to fix shutdown ordering.

Version 2.02.184 - 22nd March 2019
==================================
  Fix (de)activation of RaidLVs with visible SubLVs
  Change scan_lvs default to 0 so LVs are not scanned for PVs.
  Add scan_lvs config setting to control if lvm scans LVs for PVs.
  Fix missing proper initialization of pv_list struct when adding pv.

Version 2.02.183 - 07th December 2018
=====================================
  Avoid disabling lvmetad when repair does nothing.
  Fix component detection for md version 0.90.
  Use sync io if async io_setup fails, or use_aio=0 is set in config.
  Avoid opening devices to get block size by using existing open fd.

Version 2.02.182 - 30th October 2018
====================================
  Fix possible write race between last metadata block and the first extent.
  Fix filtering of md 1.0 devices so they are not seen as duplicate PVs.
  Fix lvconvert striped/raid0/raid0_meta -> raid6 regression.
  Add After=rbdmap.service to {lvm2-activation-net,blk-availability}.service.
  Fix pvs with lvmetad to avoid too many open files from filter reads.
  Fix pvscan --cache to avoid too many open files from filter reads.
  Reduce max concurrent aios to avoid EMFILE with many devices.
  Fix lvconvert conversion attempts to linear.
  Fix lvconvert raid0/raid0_meta -> striped regression.
  Fix lvconvert --splitmirror for mirror type (2.02.178).
  Do not pair cache policy and cache metadata format.
  Fix mirrors honoring read_only_volume_list.

Version 2.02.181 - 01 August 2018
=================================
  Reject conversions on raid1 LVs with split tracked SubLVs.
  Reject conversions on raid1 split tracked SubLVs.
  Fix dmstats list failing when no regions exist.
  Reject conversions of LVs under snapshot.